deploy/agc/gateway.yaml
# Follow along first here: https://learn.microsoft.com/en-us/azure/application-gateway/for-containers/quickstart-deploy-application-gateway-for-containers-alb-controller?tabs=install-helm-windows
# Then here to get things setup: https://learn.microsoft.com/en-us/azure/application-gateway/for-containers/quickstart-create-application-gateway-for-containers-managed-by-alb-controller?tabs=new-subnet-aks-vnet
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: pr-agent-gateway
  namespace: default
  annotations:
    alb.networking.azure.io/alb-id: $RESOURCE_ID
spec:
  gatewayClassName: azure-alb-external  # this GatewayClass was created by ALB controller
  listeners:
    - name: http-listener
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
  addresses:
  - type: alb.networking.azure.io/alb-frontend
    value: $FRONTEND_NAME
